--- a/content/blog/Jenkins 19f22870021880fdb9afe42e6d233c2c.md
+++ b/content/blog/Jenkins 19f22870021880fdb9afe42e6d233c2c.md
@@ -1,10 +1,10 @@
 ---
 title: "Integrating Jenkins with Webhooks for Efficient CI/CD Automation"
 description: "Learn how to integrate Jenkins with webhooks to streamline your CI/CD pipeline with this step-by-step guide."
-dateString: "February 21, 2025"
+date: 2025-02-21
 draft: false
 tags: ["Jenkins", "CI/CD", "Webhooks", "DevOps", "Automation", "Continuous Integration", "Continuous Deployment"]
-weight: 200
+weight: 10
 slug: "jenkins-webhooks-cicd"
 categories: ["DevOps", "Continuous Integration", "Automation", "Software Development"]
 keywords: ["Jenkins", "Webhooks", "CI/CD Automation", "DevOps Workflow", "Continuous Integration", "CI/CD Pipeline", "Automation Tutorial"]
